--- a/index.html
+++ b/index.html
@@ -7,44 +7,61 @@ THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
  
 Authors in chronological order of contribution:
 Tim Riedel
-Author 2
+Owoka Oko
  
 Further Information:
-http://diystream.cns.utexas.edu/
-
+http://cns.utexas.edu/fri
+ 
 Research Educator:
 Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-blah, blah, blah,
+This code is meant to create an app that tells users whether they are most likely experiencing a cold or seasonal allergies based on symptoms.
  
 Known Issues:
-blah, blah, blah, blah
-Ignore this error message if you see it using the javaScript console: Error with Permissions-Policy header: Origin trial controlled feature not enabled: 'interest-cohort'.
+Results page is not displaying on the website.
 
 References:
 https://www.w3schools.com/w3css/default.asp
 https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-file
 -->
 	
-<head> 
-	<title>Hello World</title>  
-]	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<link rel="stylesheet" href="w3.css">
-	<link rel="stylesheet" href="w3-colors-flat.css">
-</head> 
+   <head> 
+      <title>Hello World</title>  
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      <link rel="stylesheet" href="w3.css">
+      <link rel="stylesheet" href="w3-colors-flat.css">
+<!--meta section detailing important information such as how the app will be displayed and which devices are capable of opening it-->
+   </head> 
+
 
 <script>
+// Javascript section
+        var pneumonia_count = 0;
+        var flu_count = 0;
+//Variables used in app
+	function pneumoniaAdd(){
+            pneumonia_count = pneumonia_count + 1;
+		alert(pneumonia_count);
+        }
+        function fluAdd(){
+            flu_count = flu_count + 1;
+        }
+//Function created to add counts for cold and allergy variables
+	function percentage(){
+		pneumoniapercentage = (pneumonia_count/4)*100
+		flupercentage = (flu_count/4)*100
+//Function created to calculate the resulting percentage of allergy count and cold count
+	var results = document.getElementById("results")
+		results.innerHTML = "Chance of Pneumonia =" + pneumoniapercentage + "%" + "<br> Chance of Flu =" + flupercentage + "%"
+	}
+//Variable for results and following code titling and describing resulting percentages
+  </script>
 
-	//YOUR JAVASCRIPT GOES HERE
-
-</script>	
-
-
-<!-- THIS STYLE CODE HELPS MAKE YOUR APP LOOK GOOD. PROBABLY DONT MESS WITH IT -->
 <style>	
+/* Beginning of CSS Code*/	
 .body {
      margin: 0em;
 }
@@ -59,7 +76,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     z-index: 0;
     background-color: hsl(0,0%,100%);
 }
-
+/* Code detailing the page display details*/
   .page:target {
     left: 0vw;
     z-index: 1;
@@ -67,9 +84,89 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </style>
 
 <body>
+<!-- HTML section-->
+<div id="header" class="w3-container w3-flat-carrot">
+	<h1>Pneumonia or Flu?</h1>
+<!--Header for first page of Website-->
+</div>
 	
-	<!-- HERE IS WHERE ALL OF YOUR HTML PAGES GO -->
-	Immanuela!
+<div id="content" class="w3-container">
+	<p>Are you feeling like you might have the flu but wonder if it is pneumonia. Answer a few short questions to find out!</p>
 	
+	<a href="#one" class="w3-btn w3-grey w3-round"> Get Started </a>
+	
+	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
+ 	
+	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
+<!-- Code for introduction and disclaimer on front page-->
+<div class="page" id="one">
+	<div id="header" class="w3-container w3-flat-carrot">
+		<h1>Question 1</h1>
+<!-- Code for header displaying Question 1-->
+	</div>
+    	<div id="content" class="w3-container">
+		<p>Are your eyes watery or itchy?.</p>
+		<a href="#two" onclick="pneumoniaAdd();" class="w3-btn w3-black"> Yes</a>
+         	<a href="#two" onclick="fluAdd();" class="w3-btn w3-black">No</a> 
+<!-- Codes coding for a yes or no in relation to the variables-->
+<!-- Code for Question 1 and page 1-->
+    	</div>
+</div>
+
+<div class="page" id="two">
+	<div class="w3-container w3-flat-carrot">
+		<h1>Question 2</h1>
+<!-- Code for Question 2 header-->
+	</div>
+	
+	<div id="content2" class="w3-container">
+		<p>Do you have a fever?.</p>
+<!--Coded paragraph for Question 2-->
+        	<a href="#three" onclick="fluAdd();" class="w3-btn w3-black">Yes</a>
+		<a href="#three" onclick="pneumoniaAdd();" class="w3-btn w3-black"> No</a>
+<!-- Code for Question 2 and page 2-->
+	</div>
+</div>	
+<div class="page" id="three">
+	<div class="w3-container w3-flat-carrot">
+		<h1>Question 3</h1>
+	</div>
+<!-- COde for Question 3 code header-->
+	<div id="content3" class="w3-container">
+		<p>Do you have a sore throat?.</p>
+        	<a href="#four" onclick="fluAdd();" class="w3-btn w3-black">Yes</a>
+		<a href="#four" onclick="pneumoniaAdd();" class="w3-btn w3-black"> No</a>
+<!--Code for Question 3 and Page 3-->
+	</div>
+</div>	
+<div class="page" id="four">
+	<div class="w3-container w3-flat-carrot">
+		<h1>Question 4</h1>
+	</div>
+	
+	<div id="content4" class="w3-container">
+		<p>Are your symptoms symptoms seasonal or chronic?.</p>
+		<a href="#results-page" onclick="pneumoniaAdd();" class="w3-btn w3-black"> Yes</a>
+        	<a href="#results-page" onclick="fluAdd();" class="w3-btn w3-black">No</a>
+<!-- Code for 'yes' or 'no' for two variables in Question 4-->
+<!-- Code for Question 4 and Page 4-->
+	</div>
+</div>	
+<div class="page" id="results-page">
+	<div class="w3-container w3-flat-carrot">
+		<h1>Results</h1>
+<!--Code for header of results page-->
+	</div>
+	<div id="content5" class="w3-container">
+		<button class="w3-button w3-black" onclick="percentage()">Calculate</button>	
+		<p id="results"></p> 
+<!-- Code for page 5 and the final results page and button that produces calculation-->
+		</div>
+	</div>
+<footer class="w3-bottom w3-container w3-flat-carrot">
+	<p>DIY!</p>
+<!-- Code for footer at the bottom of the page representing FRI stream-->
+</footer>
+
 </body>
 </html>
