--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 <!-- Code for header displaying Question 1-->
 	</div>
     	<div id="content" class="w3-container">
-		<p>Are your eyes watery or itchy?.</p>
+		<p>Are you having difficulty breathing?</p>
 		<a href="#two" onclick="pneumoniaAdd();" class="w3-btn w3-black"> Yes</a>
          	<a href="#two" onclick="fluAdd();" class="w3-btn w3-black">No</a> 
 <!-- Codes coding for a yes or no in relation to the variables-->
@@ -120,7 +120,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content2" class="w3-container">
-		<p>Do you have a fever?.</p>
+		<p>Do you have a headache?</p>
 <!--Coded paragraph for Question 2-->
         	<a href="#three" onclick="fluAdd();" class="w3-btn w3-black">Yes</a>
 		<a href="#three" onclick="pneumoniaAdd();" class="w3-btn w3-black"> No</a>
@@ -133,7 +133,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 <!-- COde for Question 3 code header-->
 	<div id="content3" class="w3-container">
-		<p>Do you have a sore throat?.</p>
+		<p>Do you have a runny nose?z</p>
         	<a href="#four" onclick="fluAdd();" class="w3-btn w3-black">Yes</a>
 		<a href="#four" onclick="pneumoniaAdd();" class="w3-btn w3-black"> No</a>
 <!--Code for Question 3 and Page 3-->
@@ -145,7 +145,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content4" class="w3-container">
-		<p>Are your symptoms symptoms seasonal or chronic?.</p>
+		<p>Are you sweating?</p>
 		<a href="#results-page" onclick="pneumoniaAdd();" class="w3-btn w3-black"> Yes</a>
         	<a href="#results-page" onclick="fluAdd();" class="w3-btn w3-black">No</a>
 <!-- Code for 'yes' or 'no' for two variables in Question 4-->
