--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 <!-- COde for Question 3 code header-->
 	<div id="content3" class="w3-container">
-		<p>Do you have a runny nose?z</p>
+		<p>Do you have a runny nose?</p>
         	<a href="#four" onclick="fluAdd();" class="w3-btn w3-black">Yes</a>
 		<a href="#four" onclick="pneumoniaAdd();" class="w3-btn w3-black"> No</a>
 <!--Code for Question 3 and Page 3-->
