--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Brief Description of Goal of Code:
 This code is meant to create an app that tells users whether they are most likely experiencing a flu or pneumonia based on symptoms.
  
 Known Issues:
-None as of now.
+Image is not displaying on the live site.
 
 References:
 https://www.w3schools.com/w3css/default.asp
@@ -82,6 +82,13 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     z-index: 1;
 }
 </style>
+<style>
+       	img, object{
+            	max-height:90%;
+        		max-width:90%;
+        	}
+</style>
+
 
 <body>
 <!-- HTML section-->
