--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Brief Description of Goal of Code:
 This code is meant to create an app that tells users whether they are most likely experiencing a flu or pneumonia based on symptoms.
  
 Known Issues:
-Image is not displaying on the live site.
+Image is now displaying on the live site. No issues as of now.
 
 References:
 https://www.w3schools.com/w3css/default.asp
