--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 // Javascript section
         var pneumonia_count = 0;
         var flu_count = 0;
-//Variables used in app
+//Variables used in app (pneumonia and flu)
 	function pneumoniaAdd(){
             pneumonia_count = pneumonia_count + 1;
 		alert(pneumonia_count);
@@ -49,11 +49,11 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
         function fluAdd(){
             flu_count = flu_count + 1;
         }
-//Function created to add counts for cold and allergy variables
+//Function created to add counts for flu and pneumonia variables
 	function percentage(){
 		pneumoniapercentage = (pneumonia_count/4)*100
 		flupercentage = (flu_count/4)*100
-//Function created to calculate the resulting percentage of allergy count and cold count
+//Function created to calculate the resulting percentage of pneumonia count and flu count
 	var results = document.getElementById("results")
 		results.innerHTML = "Chance of Pneumonia =" + pneumoniapercentage + "%" + "<br> Chance of Flu =" + flupercentage + "%"
 	}
@@ -87,8 +87,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
             	max-height:90%;
         		max-width:90%;
         	}
+/* Code allowing image on first page to resive depending on screen size*/
 </style>
-
 
 <body>
 <!-- HTML section-->
@@ -105,8 +105,10 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
-	<img src="https://www.piedmont.org/media/BlogImages/Pneumonia-vs-flu.jpg" alt="Man Suffering from Pneumonia or the Flu">
 <!-- Code for introduction and disclaimer on front page-->
+	
+	<img src="https://www.piedmont.org/media/BlogImages/Pneumonia-vs-flu.jpg" alt="Man Suffering from Pneumonia or the Flu">
+<!-- Code for image on the cover page of website-->
 <div class="page" id="one">
 	<div id="header" class="w3-container w3-flat-carrot">
 		<h1>Question 1</h1>
@@ -139,7 +141,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div class="w3-container w3-flat-carrot">
 		<h1>Question 3</h1>
 	</div>
-<!-- COde for Question 3 code header-->
+<!-- Code for Question 3 code header-->
 	<div id="content3" class="w3-container">
 		<p>Do you have a runny nose?</p>
         	<a href="#four" onclick="fluAdd();" class="w3-btn w3-black">Yes</a>
